--- a/Space Panic/Space Panic.vcxproj.filters
+++ b/Space Panic/Space Panic.vcxproj.filters
@@ -109,5 +109,8 @@
     <Image Include="Spritesheet_64_64.DDS">
       <Filter>Ressourcendateien</Filter>
     </Image>
+    <Image Include="Spritesheet_64_64_Flipped.DDS">
+      <Filter>Ressourcendateien</Filter>
+    </Image>
   </ItemGroup>
 </Project>
