Changed structure to MVC paradigm and made Objects moveable

--- a/Space Panic/Space Panic.vcxproj
+++ b/Space Panic/Space Panic.vcxproj
@@ -76,13 +76,13 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>WIN32;_DEBUG;_CONSOLE;%(PreprocessorDefinitions);_CRT_SECURE_NO_WARNINGS</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>D:\HSKA\WS 2022\Projektarbeit GameProgramming\OpenGL\glfw-3.3.8.bin.WIN32\include;D:\HSKA\WS 2022\Projektarbeit GameProgramming\OpenGL\glew-2.1.0\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>C:\Users\Daniel\source\repos\Panzer0312\lib\glfw-3.3.8.bin.WIN32\include;C:\Users\Daniel\source\repos\Panzer0312\lib\glew-2.1.0\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <AdditionalDependencies>glew32.lib;glfw3.lib;opengl32.lib;%(AdditionalDependencies)</AdditionalDependencies>
-      <AdditionalLibraryDirectories>D:\HSKA\WS 2022\Projektarbeit GameProgramming\OpenGL\glfw-3.3.8.bin.WIN32\lib-vc2022;D:\HSKA\WS 2022\Projektarbeit GameProgramming\OpenGL\glew-2.1.0\lib\Release\Win32;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>C:\Users\Daniel\source\repos\Panzer0312\lib\glfw-3.3.8.bin.WIN32\lib-vc2022;C:\Users\Daniel\source\repos\Panzer0312\lib\glew-2.1.0\lib\Release\Win32;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
