created Map and implemented map loading function

--- a/Space Panic/Space Panic.vcxproj.filters
+++ b/Space Panic/Space Panic.vcxproj.filters
@@ -113,4 +113,9 @@
       <Filter>Ressourcendateien</Filter>
     </Image>
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="Map1.txt">
+      <Filter>Ressourcendateien</Filter>
+    </Text>
+  </ItemGroup>
 </Project>
