--- a/Space Panic/Space Panic.vcxproj
+++ b/Space Panic/Space Panic.vcxproj
@@ -172,6 +172,9 @@
     <Image Include="Spritesheet_64_64.DDS" />
     <Image Include="Spritesheet_64_64_Flipped.DDS" />
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="Map1.txt" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
