added gravity to player and changed obj animations to view

--- a/Space Panic/Space Panic.vcxproj
+++ b/Space Panic/Space Panic.vcxproj
@@ -170,6 +170,7 @@
     <Image Include="Spritesheet_64_64_Flipped_v2.DDS" />
   </ItemGroup>
   <ItemGroup>
+    <Text Include="Animations.txt" />
     <Text Include="Map1.txt" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
