Fully commented GameController cpp/h

--- a/.gitignore
+++ b/.gitignore
@@ -361,3 +361,6 @@ MigrationBackup/
 
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
+/Space Panic/Dokumentation/ressources
+/Space Panic/Dokumentation
+/Space Panic/Dokumentation_Seiten
