Added brick break animations, enemy falling down etc...

--- a/Space Panic/Space Panic.vcxproj
+++ b/Space Panic/Space Panic.vcxproj
@@ -198,6 +198,7 @@
     <Image Include="Spritesheet_64_64.DDS" />
     <Image Include="Spritesheet_64_64_Flipped.DDS" />
     <Image Include="Spritesheet_64_64_Flipped_v2.DDS" />
+    <Image Include="Spritesheet_64_64_Flipped_v3.DDS" />
   </ItemGroup>
   <ItemGroup>
     <Text Include="Animations.txt" />
